--- a/city-skyline/style.css
+++ b/city-skyline/style.css
@@ -1,15 +1,19 @@
 /* CSS custom variables */
 :root {
-  --building-one: green;
-  --building-two: purple;
-  --building-three: pink;
-  --building-four: palegreen;
+  --building-one: #a770ef;
+  --building-two: #0052d4;
+  --building-three: #3b4371;
+  --building-three-highlight: #243b55;
+  --building-four: #cf8bf3;
+  --window-one: #fdb99b;
+  --window-two: #bdc3c7;
+  --window-three: #faffd1;
 }
 
 *,
 *::before,
 *::after {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   box-sizing: border-box;
 }
 
@@ -18,6 +22,14 @@ body {
   width: 100%;
   margin: 0;
   overflow: hidden;
+}
+
+/* centering building parts with flexbox */
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* styling container holding all back buildings */
@@ -32,62 +44,294 @@ body {
 
 /* styling the first building */
 .back-one {
-  width: 15%;
-  height: 55%;
-  background-color: var(--building-one);
+  width: 10%;
+  height: 75%;
+}
+.back-one-top {
+  border-bottom: 7vw solid var(--building-one);
+  border-left: 4vw solid transparent;
+  border-right: 4vw solid transparent;
+  border-bottom-left-radius: 35%;
+  border-bottom-right-radius: 35%;
+}
+
+.back-one-mid {
+  width: 70%;
+  height: 10%;
+  background: linear-gradient(var(--building-one), var(--building-four));
+}
+.back-one-second-mid {
+  width: 85%;
+  height: 10%;
+  background: repeating-linear-gradient(
+      var(--building-one),
+      var(--building-one) 20%,
+      transparent 20%,
+      transparent 25%
+    ),
+    repeating-linear-gradient(
+      90deg,
+      var(--building-one),
+      var(--building-one) 10%,
+      var(--window-one) 10%,
+      var(--window-three) 15%
+    );
+}
+
+.back-one-bottom {
+  width: 100%;
+  height: 90%;
+  background: repeating-linear-gradient(
+      var(--building-one),
+      var(--building-one) 10%,
+      transparent 10%,
+      transparent 15%
+    ),
+    repeating-linear-gradient(
+      90deg,
+      var(--building-one),
+      var(--building-one) 10%,
+      var(--window-one) 10%,
+      var(--window-three) 15%
+    );
 }
 
 /* styling the second building */
 .back-two {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 10%;
-  height: 70%;
+  width: 8%;
+  height: 82%;
 }
 
 /* styling the layers of building two */
 
+.back-two-lighting {
+  width: 6%;
+  height: 10%;
+  background-color: var(--building-two);
+}
+
 .back-two-top {
   width: 62%;
   height: 10%;
-  background-color: var(--building-two);
+  border-radius: 0.2rem 0.2rem 0 0;
+  background: linear-gradient(var(--building-two), var(--building-one));
 }
 
 .back-two-middle {
   width: 70%;
   height: 10%;
-  background-color: var(--building-two);
+  background: linear-gradient(var(--building-two), var(--building-one));
 }
 
 .back-two-second-mid {
   width: 80%;
   height: 10%;
-  background-color: var(--building-two);
+  background: linear-gradient(var(--building-two), var(--building-one));
 }
 
 .back-two-bottom {
   width: 100%;
   height: 70%;
-  background-color: var(--building-two);
+  background: linear-gradient(var(--building-one), var(--building-two));
 }
 
 /* styling the third building */
 
 .back-three {
-  width: 15%;
+  width: 10%;
   height: 60%;
   border-top-left-radius: 30%;
   border-top-right-radius: 30%;
-  background-color: var(--building-three);
+  background: repeating-linear-gradient(
+    120deg,
+    var(--building-three),
+    var(--building-three) 10%,
+    var(--building-three-highlight) 10%,
+    var(--window-two) 13%
+  );
 }
-
-/* styling the layers of building two */
 
 /* styling the fourth building */
 
 .back-four {
   width: 12%;
-  height: 75%;
+  height: 78%;
+  background: repeating-linear-gradient(
+      90deg,
+      var(--building-one),
+      var(--building-two) 10%,
+      transparent 10%,
+      transparent 15%
+    ),
+    repeating-linear-gradient(
+      var(--building-one),
+      var(--building-two) 2%,
+      var(--window-three) 2%,
+      var(--window-three) 5%
+    );
+}
+
+/* styling the front buildings */
+
+.front-buildings {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-evenly;
+}
+
+.front-one {
+  width: 10%;
+  height: 55%;
+}
+
+.front-one-top {
+  border-top: 7vw solid transparent;
+  border-left: 10vw solid var(--building-three);
+  border-top-left-radius: 10%;
+}
+
+.front-one-bottom {
+  width: 100%;
+  height: 100%;
+  background: repeating-linear-gradient(
+      var(--building-three),
+      var(--building-three) 10%,
+      transparent 10%,
+      transparent 85%
+    ),
+    repeating-linear-gradient(
+      90deg,
+      var(--building-three),
+      var(--building-three) 10%,
+      var(--window-two) 10%,
+      var(--window-three) 15.5%
+    );
+}
+
+.front-two {
+  width: 7%;
+  height: 42%;
+  background: repeating-linear-gradient(
+      90deg,
+      var(--building-four),
+      var(--building-four) 10%,
+      transparent 10%,
+      transparent 15%
+    ),
+    repeating-linear-gradient(
+      var(--building-four),
+      var(--building-four) 2%,
+      var(--window-three) 2%,
+      var(--window-three) 5%
+    );
+}
+
+.front-three {
+  width: 8%;
+  height: 39%;
+}
+
+.front-three-top {
+  border-bottom: 8vh solid var(--building-one);
+  border-left: 2vw solid transparent;
+  border-right: 2vw solid transparent;
+}
+
+.front-three-mid {
+  width: 80%;
+  height: 25%;
+  background: repeating-linear-gradient(
+      var(--building-one),
+      var(--building-one) 10%,
+      transparent 10%,
+      transparent 15%
+    ),
+    repeating-linear-gradient(
+      90deg,
+      var(--building-one),
+      var(--building-one) 10%,
+      var(--window-three) 10%,
+      var(--window-three) 18%
+    );
+}
+
+.front-three-bottom {
+  width: 100%;
+  height: 90%;
+  background: repeating-linear-gradient(
+      var(--building-one),
+      var(--building-one) 10%,
+      transparent 10%,
+      transparent 95%
+    ),
+    repeating-linear-gradient(
+      90deg,
+      var(--building-one),
+      var(--building-one) 10%,
+      var(--window-three) 10%,
+      var(--window-three) 15%
+    );
+}
+
+.front-four {
+  width: 10%;
+  height: 50%;
+}
+
+.front-four-lightning {
+  width: 5%;
+  height: 10%;
   background-color: var(--building-four);
+}
+
+.front-four-top {
+  width: 70%;
+  height: 10%;
+  background: linear-gradient(var(--building-four), var(--building-one));
+}
+
+.front-four-mid {
+  width: 80%;
+  height: 10%;
+  background: linear-gradient(var(--building-four), var(--building-one));
+}
+
+.front-four-bottom {
+  width: 100%;
+  height: 100%;
+  background: repeating-linear-gradient(
+      var(--building-four),
+      var(--building-four) 10%,
+      transparent 10%,
+      transparent 95%
+    ),
+    repeating-linear-gradient(
+      90deg,
+      var(--building-four),
+      var(--building-four) 10%,
+      var(--window-three) 10%,
+      var(--window-three) 15%
+    );
+}
+
+.front-five {
+  width: 10%;
+  height: 48%;
+  background: repeating-linear-gradient(
+      var(--building-one),
+      var(--building-one) 5%,
+      transparent 5%,
+      transparent 10%
+    ),
+    repeating-linear-gradient(
+      90deg,
+      var(--building-one),
+      var(--building-one) 10%,
+      var(--window-three) 10%,
+      var(--window-three) 46%
+    );
 }
