--- a/city-skyline/style.css
+++ b/city-skyline/style.css
@@ -27,6 +27,8 @@ body {
 /* styling container holding all back buildings */
 
 .back-buildings {
+  position: absolute;
+  top: 0;
   display: flex;
   align-items: flex-end;
   justify-content: space-evenly;
